--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
      <link rel="stylesheet" href="style.css">
      <div class="container">
        <nav class="item"><a href="index.html">About me</a></nav>
-       <nav class="item"><a href="portfolio.html">What I can do</a></nav>
+       <nav class="item"><a href="404.html">What I can do</a></nav>
        <nav class="item"><a href="404.html">Contact me</a></nav>
      </div>
 
