--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="flexbox">
           <div class="flexbox-item-2">
           <p><b>Toa Trading Company (Tokyo, Japan)&nbsp;</b></p>
-          <p>Assistera vid import och export av varor.</p>
+          <p>Assist in import and export of goods.</p>
           </div>
           <div class="flexbox-item-3">
             <p>2010 - 2018</p>
