added linkedin + github

--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
  </head>
  <body>
   <div>
-    <div class="flexbox-container">
-      <div class="flexbox-item-1">
-      <img src="/me.jpg" alt="" width="200">
-      </div>
-    <div class="flexbox-item-1">
+     <div class="flexbox-container">
+       <div class="flexbox-item-1">
+       <img src="/me.jpg" alt="" width="200">
+       <br>
+       &emsp;&emsp;&emsp;&emsp; &emsp;<a class="link" href="//linkedin.com/in/lien-chu-huang-85a78b238" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+       &emsp;<a class="link" href="////github.com/Lien-Chu" target="_blank"><i class="fa-brands fa-github-square"></i></a>
+       </div>
+     
+     <div class="flexbox-item-1">
        <h3>LIEN-CHU HUANG</h3>
        <div class="flexbox">
        <p><b>
