--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
        <div class="flexbox-item-1">
        <img src="/me.jpg" alt="" width="200">
        <br>
-       &emsp;&emsp;&emsp;&emsp; &emsp;<a class="link" href="//linkedin.com/in/lien-chu-huang-85a78b238" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+       &emsp;&emsp;&emsp;&emsp;&emsp;<a class="link" href="//linkedin.com/in/lien-chu-huang-85a78b238" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
        &emsp;<a class="link" href="////github.com/Lien-Chu" target="_blank"><i class="fa-brands fa-github-square"></i></a>
        </div>
      
      <div class="flexbox-item-1">
        <h3>LIEN-CHU HUANG</h3>
        <div class="flexbox">
-       <p><b>
+          <p><b>
           Hi, I'm Lien-Chu and I'm a responsible person who is easy to work with and has no problems working independently.
-       <br> 
-       <br> 
+          <br> 
+          <br> 
           I am sociable, outgoing, and get along well with my colleagues.
-        <br>
-        <br> 
+          <br>
+          <br> 
           My goal is to become a web developer and web designer. 
-       <br>
-       <br> 
+          <br>
+          <br> 
           I will continue to learn new skills about front-end and back-end and various devices to improve my professional skills and become a full-Stack developer.
           <b></p>
        </div>
@@ -44,7 +44,7 @@
         </div>
 
         <h3>EDUCATION</h3>
-
+        
        <div class="flexbox">
           <div class="flexbox-item-2">
             <p><b>Hermods Swedish language school&emsp;&nbsp;&nbsp;</b></p>
@@ -56,7 +56,7 @@
         </div>
         <div class="flexbox">
           <div class="flexbox-item-2">
-            <p><b>Kai Japanese Language School&emsp;&emsp;&emsp;&nbsp;&nbsp;</b></p>
+            <p><b>Kai Japanese Language School&emsp;&emsp;&emsp;&nbsp;</b></p>
             <p>Language education</P>
           </div>
           <div class="flexbox-item-3">
@@ -84,7 +84,7 @@
         </div>
         <div class="flexbox">
           <div class="flexbox-item-2">
-            <p><b>The Lalu hotel (Nantou, Taiwan)&emsp;&emsp;&nbsp;&nbsp;&nbsp;</b></p>
+            <p><b>The Lalu hotel (Nantou, Taiwan)&emsp;&emsp;&nbsp;&nbsp;</b></p>
             <p>Sale of handicrafts and souvenirs.</p>
           </div>
           <div class="flexbox-item-3">
@@ -104,11 +104,7 @@
           <div class="flexbox">
            <p><b>Swedish</b>  - SAS basis 4</p>
           </div>
-
       </div>
-
   </div>
- 
-
  </body>
 </html>
