Fixed growing big icons

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,7 @@
 <html>
   <head>
      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap">
+     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
      <script src="https://kit.fontawesome.com/d581a1ca1a.js" crossorigin="anonymous"></script>
      <title>About Lien-Chu</title>
      <link rel="stylesheet" href="style.css">
@@ -10,12 +11,13 @@
        <nav class="item"><a href="404.html">What I can do</a></nav>
        <nav class="item"><a href="404.html">Contact me</a></nav>
      </div>
+     <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
+     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
    <body>
-
-
+      <div id="root"></div>
     </div>
 
-
+     <script type="text/babel" src="portfolio.js"></script>
    </body>
 </html>
  
