--- a/portfolio.html
+++ b/portfolio.html
@@ -6,11 +6,11 @@
      <script src="https://kit.fontawesome.com/d581a1ca1a.js" crossorigin="anonymous"></script>
      <title>About Lien-Chu</title>
      <link rel="stylesheet" href="style.css">
-     <div class="container">
-       <nav class="item"><a href="index.html">About me</a></nav>
-       <nav class="item"><a href="404.html">What I can do</a></nav>
-       <nav class="item"><a href="404.html">Contact me</a></nav>
-     </div>
+     <nav class="container">
+         <a href="index.html">About me</a> &emsp;&emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;
+         <a href="404.html">What I can do</a> &emsp;&emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;
+         <a href="404.html">Contact me</a>
+     </nav>
      <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
      <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
    <body>
