--- a/404.html
+++ b/404.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html>
- <head>
+ <html>
+   <head>
      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap">
      <script src="https://kit.fontawesome.com/d581a1ca1a.js" crossorigin="anonymous"></script>
      <title>About Lien-Chu</title>
-     <link rel="stylesheet" href="style.css">
-     <div class="container">
-       <nav class="item"><a href="index.html">About me</a></nav>
-       <nav class="item"><a href="404.html">What I can do</a></nav>
-       <nav class="item"><a href="404.html">Contact me</a></nav>
-     </div>
-
+     <link rel="stylesheet" href="style.css">   
+     <nav class="container">
+        <a href="index.html">About me</a> &emsp;&emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;
+        <a href="404.html">What I can do</a> &emsp;&emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;
+        <a href="404.html">Contact me</a>
+     </nav> 
+   <body>
          <div class="error">
              <h1 style="text-align: center;">Oooops! Something went wrong!</h1>
 
