--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
      <script src="https://kit.fontawesome.com/d581a1ca1a.js" crossorigin="anonymous"></script>
      <title>About Lien-Chu</title>
      <link rel="stylesheet" href="style.css">
-     <div class="container">
-       <nav class="item"><a href="index.html">About me</a></nav>
-       <nav class="item"><a href="404.html">What I can do</a></nav>
-       <nav class="item"><a href="404.html">Contact me</a></nav>
-     </div>
+     <nav class="container">
+       <a href="index.html">About me</a> &emsp;&emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;
+       <a href="404.html">What I can do</a> &emsp;&emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;
+       <a href="404.html">Contact me</a>
+    </nav>
  </head>
  <body>
   <div>
