--- a/404.html
+++ b/404.html
@@ -4,10 +4,10 @@
      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap">
      <script src="https://kit.fontawesome.com/d581a1ca1a.js" crossorigin="anonymous"></script>
      <title>About Lien-Chu</title>
-     <link rel="stylesheet" href="style.css">   
+     <link rel="stylesheet" href="404.css">   
      <nav class="container">
         <a href="index.html">About me</a> &emsp;&emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;
-        <a href="404.html">What I can do</a> &emsp;&emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;
+        <a href="portfolio.html">What I can do</a> &emsp;&emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;
         <a href="404.html">Contact me</a>
      </nav> 
    <body>
@@ -20,4 +20,8 @@
              <p>4 0 4 !</p>
          </div>
     </body>
+    <hr>
+<footer>
+  <em>Copyright &copy; <em>LienChu 2022</em><br>
+</footer>
   </html>
