--- a/index.html
+++ b/index.html
@@ -1,110 +1,134 @@
 <!DOCTYPE html>
 <html>
- <head>
-     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap">
-     <script src="https://kit.fontawesome.com/d581a1ca1a.js" crossorigin="anonymous"></script>
-     <title>About Lien-Chu</title>
-     <link rel="stylesheet" href="style.css">
-     <nav class="container">
-       <a href="index.html">About me</a> &emsp;&emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;
-       <a href="404.html">What I can do</a> &emsp;&emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;
-       <a href="404.html">Contact me</a>
-    </nav>
- </head>
- <body>
-  <div>
-     <div class="flexbox-container">
-       <div class="flexbox-item-1">
-       <img src="/me.jpg" alt="" width="200">
-       <br>
-       &emsp;&emsp;&emsp;&emsp;&emsp;<a class="link" href="//linkedin.com/in/lien-chu-huang-85a78b238" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-       &emsp;<a class="link" href="////github.com/Lien-Chu" target="_blank"><i class="fa-brands fa-github-square"></i></a>
-       </div>
-     
-     <div class="flexbox-item-1">
-       <h3>LIEN-CHU HUANG</h3>
-       <div class="flexbox">
-          <p><b>
-          Hi, I'm Lien-Chu and I'm a responsible person who is easy to work with and has no problems working independently.
-          <br> 
-          <br> 
+
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <script src="https://kit.fontawesome.com/d581a1ca1a.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap">
+  <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="bird.svg" type="image.png">
+  <title>About Lien-Chu</title>
+</head>
+<header>
+  <nav>
+    <table class="nav" >
+      <th><a href="index.html">About me</a></th>
+      <th><a href="portfolio.html">What I can do</a></th>
+      <th><a href="404.html">Contact me</a></th>
+    </table>
+  </nav>
+</header>
+
+<body>
+  <div class="flexbox-container">
+    <div>
+      <img src="/me.jpg" alt="" width="200">
+      <br>
+      &emsp;&emsp;&emsp;&emsp;&emsp;<a class="link" href="//linkedin.com/in/lien-chu-huang-85a78b238" target="_blank"><i
+          class="fa-brands fa-linkedin"></i></a>
+      &emsp;<a class="link" href="////github.com/Lien-Chu" target="_blank"><i
+          class="fa-brands fa-github-square"></i></a>
+    </div>
+    <div class="container">
+      <h3>LIEN-CHU HUANG</h3>
+      <p><b>
+          Hi, I'm Lien-Chu and I'm a responsible person who is easy to work with and has no problems working independently. 
+          <br>
+          <br>
           I am sociable, outgoing, and get along well with my colleagues.
           <br>
-          <br> 
-          My goal is to become a web developer and web designer. 
           <br>
-          <br> 
-          I will continue to learn new skills about front-end and back-end and various devices to improve my professional skills and become a full-Stack developer.
+          My goal is to become a web developer and web designer.
+          <br>
+          <br>
+          I will continue to learn new skills about front-end and back-end and various devices to improve my
+          professional skills and become a full-Stack developer.
           <b></p>
-       </div>
 
-        <h3>COMPUTER KNOWLEDGE</h3>
-        <div class="flexbox">
-          <p><b>CSS,&emsp; HTML, &emsp;Javascript, &emsp; C#, &emsp;PHP</b></p>
-        </div>
+      <h3>COMPUTER KNOWLEDGE</h3>
 
-        <h3>EDUCATION</h3>
-        
-       <div class="flexbox">
-          <div class="flexbox-item-2">
-            <p><b>Hermods Swedish language school&emsp;&nbsp;&nbsp;</b></p>
-            <p>Language education</p>
-            </div>
-          <div class="flexbox-item-3">
-            <p>2020 - 2022</p>
-          </div>
-        </div>
-        <div class="flexbox">
-          <div class="flexbox-item-2">
-            <p><b>Kai Japanese Language School&emsp;&emsp;&emsp;&nbsp;</b></p>
-            <p>Language education</P>
-          </div>
-          <div class="flexbox-item-3">
-           <p>2009 - 2010</p>
-          </div>
-        </div>
-        <div class="flexbox">
-          <div class="flexbox-item-2">
-            <p><b>Vanung  University&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&nbsp;&emsp;&emsp;</b></p>
-            <p>Civil Engineering</P>
-          </div>
-          <div class="flexbox-item-3">
-            <p>2000 - 2002</p>
-          </div>
-        </div>
-          <h3>PROFESSIONAL EXPERIENCE</h3>
-        <div class="flexbox">
-          <div class="flexbox-item-2">
-          <p><b>Toa Trading Company (Tokyo, Japan)&nbsp;</b></p>
-          <p>Assist in import and export of goods.</p>
-          </div>
-          <div class="flexbox-item-3">
-            <p>2010 - 2018</p>
-          </div>
-        </div>
-        <div class="flexbox">
-          <div class="flexbox-item-2">
-            <p><b>The Lalu hotel (Nantou, Taiwan)&emsp;&emsp;&nbsp;&nbsp;</b></p>
-            <p>Sale of handicrafts and souvenirs.</p>
-          </div>
-          <div class="flexbox-item-3">
-             <p>2003 - 2009</p>
-          </div>
-         </div>
-         <h3>LANGUAGE</h3>
-          <div class="flexbox">
-           <p><b>Mandarin / Min Nan</b> - Mother tongue</p>
-          </div>
-          <div class="flexbox">
-           <p><b>Japanese</b> - JLPT N1</p>
-          </div>
-          <div class="flexbox">
-           <p><b>English</b>    - Conversational</p>
-          </div>
-          <div class="flexbox">
-           <p><b>Swedish</b>  - SAS basis 4</p>
-          </div>
-      </div>
-  </div>
- </body>
+      <table>
+        <th><b>CSS,&emsp; HTML, &emsp;Javascript, &emsp; C#, &emsp;PHP</b></th>
+      </table>
+      <h3>EDUCATION</h3>
+
+      <table>
+        <tr>
+          <th>Hermods Swedish language schoo</th>
+          <td>2020 - 2022</td>
+        </tr>
+        <tr>
+          <td>Language education</td>
+          <td></td>
+        </tr>
+        <tr>
+          <th>Kai Japanese Language School</th>
+          <td>2009 - 2010</td>
+        </tr>
+        <tr>
+          <td>Language education</td>
+          <td></td>
+        </tr>
+        <tr>
+          <th>Vanung University</th>
+          <td>2000 - 2002</td>
+        </tr>
+        <tr>
+          <td>Civil Engineering</td>
+          <td></td>
+        </tr>
+      </table>
+
+      <h3>PROFESSIONAL EXPERIENCE</h3>
+
+      <table>
+        <tr>
+          <th>Toa Trading Company (Tokyo, Japan)</th>
+          <td>2010 - 2018</td>
+        </tr>
+        <tr>
+          <td>Assist in import and export of goods.</td>
+          <td></td>
+        </tr>
+        <tr>
+          <th>The Lalu hotel (Nantou, Taiwan)</th>
+          <td>2003 - 2009</td>
+        </tr>
+        <tr>
+          <td>Sale of handicrafts and souvenirs.</td>
+          <td></td>
+        </tr>
+      </table>
+
+      <h3>LANGUAGE</h3>
+
+      <table class="language">
+        <tr>
+          <th>Mandarin / Min Nan</th>
+          <td>Mother tongue</td>
+        </tr>
+        <tr>
+          <th>Japanese</th>
+          <td>JLPT N1</td>
+        </tr>
+        <tr>
+          <th>English</th>
+          <td>Conversational</td>
+        </tr>
+        <tr>
+          <th>Swedish</th>
+          <td>SAS basis 4</td>
+        </tr>
+      </table>
+
+</body>
+<hr>
+<footer>
+  <em>Copyright &copy; <em>LienChu 2022</em><br>
+    <a id="footer" href="https://vicky.kilumanga.com/" target="_blank">About me</a>
+</footer>
+</div>
+
 </html>
