--- a/portfolio.html
+++ b/portfolio.html
@@ -1,23 +1,55 @@
 <!DOCTYPE html>
 <html>
-  <head>
-     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap">
-     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-     <script src="https://kit.fontawesome.com/d581a1ca1a.js" crossorigin="anonymous"></script>
-     <title>About Lien-Chu</title>
-     <link rel="stylesheet" href="style.css">
-     <nav class="container">
-         <a href="index.html">About me</a> &emsp;&emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;
-         <a href="404.html">What I can do</a> &emsp;&emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;
-         <a href="404.html">Contact me</a>
-     </nav>
-     <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
-     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
-   <body>
-      <div id="root"></div>
-    </div>
 
-     <script type="text/babel" src="portfolio.js"></script>
-   </body>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <script src="https://kit.fontawesome.com/d581a1ca1a.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap">
+  <link rel="stylesheet" href="portfolio.css">
+  <link rel="shortcut icon" href="bird.svg" type="image.png">
+  <title>Lien-Chu's portfolio</title>
+</head>
+<header>
+  <nav>
+    <table class="nav">
+      <th><a href="index.html">About me</a></th>
+      <th><a href="portfolio.html">What I can do</a></th>
+      <th><a href="404.html">Contact me</a></th>
+    </table>
+  </nav>
+</header>
+
+<body>
+  <div class="container">
+
+    <h1><a href="https://superlative-creponne-1f084e.netlify.app/"> LienChu's Oprofessionella Filmintroduktion</a></h1>
+    <br>
+
+    <table>
+      <tr>
+        <td><img src="/1.jpg"></td>
+        <td><img src="/2.jpg"></td>
+        <td><img src="/3.jpg"></td>
+      </tr>
+      <tr>
+        <td><img src="/4.jpg"></td>
+        <td><img src="/5.jpg"></td>
+        <td><img src="/6.jpg"></td>
+      </tr>
+      <tr>
+        <td><img src="/7.jpg"></td>
+        <td><img src="/8.jpg"></td>
+        <td><img src="/9.jpg"></td>
+      </tr>
+  
+    </table>
+  </div>
+</body>
+<hr>
+<footer>
+  <em>Copyright &copy; <em>LienChu 2022</em><br>
+</footer>
+
 </html>
- 
