--- a/404.html
+++ b/404.html
@@ -1,27 +1,37 @@
 <!DOCTYPE html>
- <html>
-   <head>
-     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap">
-     <script src="https://kit.fontawesome.com/d581a1ca1a.js" crossorigin="anonymous"></script>
-     <title>About Lien-Chu</title>
-     <link rel="stylesheet" href="404.css">   
-     <nav class="container">
-        <a href="index.html">About me</a> &emsp;&emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;
-        <a href="portfolio.html">What I can do</a> &emsp;&emsp;&emsp;&emsp;&emsp; &emsp;&emsp;&emsp;&emsp;&emsp;
-        <a href="404.html">Contact me</a>
-     </nav> 
-   <body>
-         <div class="error">
-             <h1 style="text-align: center;">Oooops! Something went wrong!</h1>
+<html>
 
-             <br>
-             <i class="fa-brands fa-suse"></i> &emsp;&emsp;&emsp;
-             <i class="fa-solid fa-bugs"></i>
-             <p>4 0 4 !</p>
-         </div>
+<head>
+  <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <script src="https://kit.fontawesome.com/d581a1ca1a.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap">
+  <link rel="stylesheet" href="404.css">
+  <link rel="shortcut icon" href="bird.svg" type="image.png">
+  <title>Lien-Chu's Portfolio</title>
+</head>
+<header>
+  <nav>
+    <table class="nav">
+      <th><a href="index.html">About me</a></th>
+      <th><a href="portfolio.html">My Portfolio</a></th>
+      <th><a href="404.html">Contact me</a></th>
+    </table>
+  </nav>
+</header>
+   <body>
+      <div class="container">
+        <h1><i class="fa-brands fa-suse"></i></h1>
+        &emsp;&emsp;&emsp;
+        <h1>Oooops! Something went wrong!</h1>
+        &emsp;&emsp;&emsp;
+        <br>
+        <h1><i class="fa-solid fa-bugs"></i></h1>
+      </div>
     </body>
     <hr>
-<footer>
-  <em>Copyright &copy; <em>LienChu 2022</em><br>
-</footer>
+ <footer>
+  <p><em>Copyright &copy; <em>LienChu 2022</em><br></p>
+ </footer>
   </html>
