--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <script src="https://kit.fontawesome.com/d581a1ca1a.js" crossorigin="anonymous"></script>
@@ -15,15 +15,15 @@
   <nav>
     <table class="nav" >
       <th><a href="index.html">About me</a></th>
-      <th><a href="portfolio.html">What I can do</a></th>
-      <th><a href="404.html">Contact me</a></th>
+      <th><a href="portfolio.html">My Portfolio</a></th>
+      <th><a href="contact.html">Contact me</a></th>
     </table>
   </nav>
 </header>
 
 <body>
   <div class="flexbox-container">
-    <div>
+    <div id="me">
       <img src="/me.jpg" alt="" width="200">
       <br>
       &emsp;&emsp;&emsp;&emsp;&emsp;<a class="link" href="//linkedin.com/in/lien-chu-huang-85a78b238" target="_blank"><i
@@ -33,7 +33,7 @@
     </div>
     <div class="container">
       <h3>LIEN-CHU HUANG</h3>
-      <p><b>
+      <p id="Lienchu"><b>
           Hi, I'm Lien-Chu and I'm a responsible person who is easy to work with and has no problems working independently. 
           <br>
           <br>
@@ -122,13 +122,10 @@
           <td>SAS basis 4</td>
         </tr>
       </table>
-
 </body>
 <hr>
 <footer>
-  <em>Copyright &copy; <em>LienChu 2022</em><br>
-    <a id="footer" href="https://vicky.kilumanga.com/" target="_blank">About me</a>
+  <p><em>Copyright &copy; <em>LienChu 2022</em></p>
 </footer>
 </div>
-
 </html>
