--- a/portfolio.html
+++ b/portfolio.html
@@ -2,21 +2,21 @@
 <html>
 
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <script src="https://kit.fontawesome.com/d581a1ca1a.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap">
   <link rel="stylesheet" href="portfolio.css">
   <link rel="shortcut icon" href="bird.svg" type="image.png">
-  <title>Lien-Chu's portfolio</title>
+  <title>Lien-Chu's Portfolio</title>
 </head>
 <header>
   <nav>
     <table class="nav">
       <th><a href="index.html">About me</a></th>
-      <th><a href="portfolio.html">What I can do</a></th>
-      <th><a href="404.html">Contact me</a></th>
+      <th><a href="portfolio.html">My Portfolio</a></th>
+      <th><a href="contact.html">Contact me</a></th>
     </table>
   </nav>
 </header>
@@ -24,7 +24,7 @@
 <body>
   <div class="container">
 
-    <h1><a href="https://superlative-creponne-1f084e.netlify.app/"> LienChu's Oprofessionella Filmintroduktion</a></h1>
+    <h1><a href="https://superlative-creponne-1f084e.netlify.app/" target="_blank"> LienChu's Oprofessionella Filmintroduktion</a></h1>
     <br>
 
     <table>
@@ -51,5 +51,4 @@
 <footer>
   <em>Copyright &copy; <em>LienChu 2022</em><br>
 </footer>
-
 </html>
