--- a/index.html
+++ b/index.html
@@ -48,10 +48,9 @@
           <b></p>
 
       <h3>COMPUTER KNOWLEDGE</h3>
+        <p id="knowledge"><b>CSS,&emsp; HTML, &emsp;Javascript, &emsp; C#, &emsp;PHP</b><p>
+          
 
-      <table>
-        <th><b>CSS,&emsp; HTML, &emsp;Javascript, &emsp; C#, &emsp;PHP</b></th>
-      </table>
       <h3>EDUCATION</h3>
 
       <table>
@@ -63,6 +62,9 @@
           <td>Language education</td>
           <td></td>
         </tr>
+       </table>
+       <br>
+        <table>
         <tr>
           <th>Kai Japanese Language School</th>
           <td>2009 - 2010</td>
@@ -71,6 +73,9 @@
           <td>Language education</td>
           <td></td>
         </tr>
+        </table>
+        <br>
+         <table>
         <tr>
           <th>Vanung University</th>
           <td>2000 - 2002</td>
@@ -80,7 +85,7 @@
           <td></td>
         </tr>
       </table>
-
+      <br>
       <h3>PROFESSIONAL EXPERIENCE</h3>
 
       <table>
@@ -92,6 +97,9 @@
           <td>Assist in import and export of goods.</td>
           <td></td>
         </tr>
+      </table>
+      <br>
+       <table>
         <tr>
           <th>The Lalu hotel (Nantou, Taiwan)</th>
           <td>2003 - 2009</td>
@@ -101,6 +109,7 @@
           <td></td>
         </tr>
       </table>
+      <br>
 
       <h3>LANGUAGE</h3>
 
@@ -122,6 +131,7 @@
           <td>SAS basis 4</td>
         </tr>
       </table>
+      <br><br>
 </body>
 <hr>
 <footer>
