--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
           class="fa-brands fa-github-square"></i></a>
     </div>
     <div class="container">
+      <br>
       <h3>LIEN-CHU HUANG</h3>
       <p id="Lienchu"><b>
           Hi, I'm Lien-Chu and I'm a responsible person who is easy to work with and has no problems working independently. 
@@ -48,7 +49,7 @@
           <b></p>
 
       <h3>COMPUTER KNOWLEDGE</h3>
-        <p id="knowledge"><b>CSS,&emsp; HTML, &emsp;Javascript, &emsp; C#, &emsp;PHP</b><p>
+        <p id="knowledge"><b>CSS, &emsp; HTML, &emsp; Javascript, &emsp; React.js, &emsp; C#, &emsp; PHP</b><p>
           
 
       <h3>EDUCATION</h3>
