Edited tags order

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,7 @@
   <link rel="shortcut icon" href="bird.svg" type="image.png">
   <title>Lien-Chu's Portfolio</title>
 </head>
+<body>
 <header>
   <nav>
     <table class="nav">
@@ -21,7 +22,6 @@
   </nav>
 </header>
 
-<body>
   <div class="container">
 
     <h1><a href="https://lienchus-filmintroduktion.netlify.app/" target="_blank"> LienChu's Oprofessionella Filmintroduktion</a></h1>
@@ -46,9 +46,10 @@
   
     </table>
   </div>
-</body>
+
 <hr>
-<footer>
-  <em>Copyright &copy; <em>LienChu 2022</em><br>
-</footer>
+  <footer>
+    <p><em>Copyright &copy; <em>LienChu 2022</em><br></p>
+  </footer>
+</body>
 </html>
