--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="shortcut icon" href="bird.svg" type="image.png">
   <title>About Lien-Chu</title>
 </head>
+<body>
 <header>
   <nav>
     <table class="nav" >
@@ -21,7 +22,6 @@
   </nav>
 </header>
 
-<body>
   <div class="flexbox-container">
     <div id="me">
       <img src="/me.jpg" alt="" width="200">
@@ -133,10 +133,11 @@
         </tr>
       </table>
       <br><br>
-</body>
-<hr>
+    </div>
+  </div>
 <footer>
-  <p><em>Copyright &copy; <em>LienChu 2022</em></p>
+  <hr>
+  <p><em>Copyright &copy; <em>LienChu 2022</em><br></p>
 </footer>
-</div>
+</body>
 </html>
