--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
       <script src="https://kit.fontawesome.com/d581a1ca1a.js" crossorigin="anonymous"></script>
       <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap">
       <link rel="stylesheet" href="contact.css">
-      <link rel="shortcut icon" href="bird.svg" type="image.png">
+      <link rel="shortcut icon" href="img/bird.svg" type="image.png">
       <title>Contact Lien-Chu</title>
     </head>
 <body>
@@ -37,7 +37,8 @@
     </form>
     <br><br><br>
       </div>
-   </div>
+   </div>  
+    <br><br>
     <hr>
   <footer>
     <p><em>Copyright &copy; <em>LienChu 2022</em><br></p>
