--- a/index.html
+++ b/index.html
@@ -2,142 +2,161 @@
 <html>
 
 <head>
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+  <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <script src="https://kit.fontawesome.com/d581a1ca1a.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap">
   <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="bird.svg" type="image.png">
+  <link rel="shortcut icon" href="/img/bird.svg" type="image.png">
   <title>About Lien-Chu</title>
 </head>
+
 <body>
-<header>
-  <nav>
-    <table class="nav" >
-      <th><a href="index.html">About me</a></th>
-      <th><a href="portfolio.html">My Portfolio</a></th>
-      <th><a href="contact.html">Contact me</a></th>
-    </table>
-  </nav>
-</header>
+  <header>
+    <nav>
+      <table class="nav">
+        <th><a href="index.html">About me</a></th>
+        <th><a href="portfolio.html">My Portfolio</a></th>
+        <th><a href="contact.html">Contact me</a></th>
+      </table>
+    </nav>
+  </header>
 
   <div class="flexbox-container">
     <div id="me">
-      <img src="/me.jpg" alt="" width="200">
+      <img src="/img/me.jpg" alt="" width="200">
       <br>
-      &emsp;&emsp;&emsp;&emsp;&emsp;<a class="link" href="//linkedin.com/in/lien-chu-huang-85a78b238" target="_blank"><i
-          class="fa-brands fa-linkedin"></i></a>
-      &emsp;<a class="link" href="////github.com/Lien-Chu" target="_blank"><i
-          class="fa-brands fa-github-square"></i></a>
+      <table class="i">
+        <tr>
+          <th><a class="link" href="//linkedin.com/in/lien-chu-huang-85a78b238" target="_blank"><i
+                class="fa-brands fa-linkedin"></i></a></th>
+          <th><a class="link" href="////github.com/Lien-Chu" target="_blank"><i
+                class="fa-brands fa-github-square"></i></a></th>
+        </tr>
+      </table>
     </div>
     <div class="container">
       <br>
-      <h3>LIEN-CHU HUANG</h3>
-      <p id="Lienchu"><b>
-          Hi, I'm Lien-Chu and I'm a responsible person who is easy to work with and has no problems working independently. 
-          <br>
-          <br>
-          I am sociable, outgoing, and get along well with my colleagues.
-          <br>
-          <br>
-          My goal is to become a web developer and web designer.
-          <br>
-          <br>
-          I will continue to learn new skills about front-end and back-end and various devices to improve my
-          professional skills and become a full-Stack developer.
-          <b></p>
+      <div class="box">
+        <h3>&emsp;LIEN-CHU HUANG</h3>
+        <p id="Lienchu"><b>
+            Hi, I'm Lien-Chu and I'm a responsible person who is easy to work with and has no problems working
+            independently.
+            <br>
+            <br>
+            I am sociable, outgoing, and get along well with my colleagues.
+            <br>
+            <br>
+            My goal is to become a web developer and web designer.
+            <br>
+            <br>
+            I will continue to learn new skills about front-end and back-end and various devices to improve my
+            professional skills and become a full-Stack developer.
+            <b></p>
 
-      <h3>COMPUTER KNOWLEDGE</h3>
-        <p id="knowledge"><b>CSS,&emsp;HTML,&emsp;Javascript,&emsp;React.js,&emsp;C#,&emsp;PHP</b><p>
-          
+      </div>
+      <div class="box">
+        <h3>&emsp;COMPUTER KNOWLEDGE</h3>
+        <p id="knowledge"><b>CSS,&emsp;HTML,&emsp;Javascript,&emsp;React.js,&emsp;C#,&emsp;PHP</b>
+        </p>
 
-      <h3>EDUCATION</h3>
 
-      <table>
-        <tr>
-          <th>Hermods Swedish language schoo</th>
-          <td>2020 - 2022</td>
-        </tr>
-        <tr>
-          <td>Language education</td>
-          <td></td>
-        </tr>
-       </table>
-       <br>
+      </div>
+      <div class="box">
+        <h3>&emsp;EDUCATION</h3>
+
         <table>
-        <tr>
-          <th>Kai Japanese Language School</th>
-          <td>2009 - 2010</td>
-        </tr>
-        <tr>
-          <td>Language education</td>
-          <td></td>
-        </tr>
+          <tr>
+            <th>Hermods Swedish language schoo</th>
+            <td>2020 - 2022</td>
+          </tr>
+          <tr>
+            <td>Language education</td>
+          </tr>
         </table>
         <br>
-         <table>
-        <tr>
-          <th>Vanung University</th>
-          <td>2000 - 2002</td>
-        </tr>
-        <tr>
-          <td>Civil Engineering</td>
-          <td></td>
-        </tr>
-      </table>
+        <table>
+          <tr>
+            <th>Kai Japanese Language School</th>
+            <td>2009 - 2010</td>
+          </tr>
+          <tr>
+            <td>Language education</td>
+          </tr>
+        </table>
+        <br>
+        <table>
+          <tr>
+            <th>Vanung University</th>
+            <td>2000 - 2002</td>
+          </tr>
+          <tr>
+            <td>Civil Engineering</td>
+          </tr>
+        </table>
+        <br>
+      </div>
       <br>
-      <h3>PROFESSIONAL EXPERIENCE</h3>
+      <div class="box">
+        <h3>&emsp;PROFESSIONAL EXPERIENCE</h3>
 
-      <table>
-        <tr>
-          <th>Toa Trading Company (Tokyo, Japan)</th>
-          <td>2010 - 2018</td>
-        </tr>
-        <tr>
-          <td>Assist in import and export of goods.</td>
-          <td></td>
-        </tr>
-      </table>
+        <table>
+          <tr>
+            <th>Toa Trading Company (Tokyo, Japan)</th>
+            <td>2010 - 2018</td>
+          </tr>
+          <tr>
+            <td>Assist in import and export of goods.</td>
+          </tr>
+        </table>
+        <br>
+        <table>
+          <tr>
+            <th>The Lalu hotel (Nantou, Taiwan)</th>
+            <td>2003 - 2009</td>
+          </tr>
+          <tr>
+            <td>Boutique Supervisor.</td>
+          </tr>
+        </table>
+        <br>
+      </div>
       <br>
-       <table>
-        <tr>
-          <th>The Lalu hotel (Nantou, Taiwan)</th>
-          <td>2003 - 2009</td>
-        </tr>
-        <tr>
-          <td>Sale of handicrafts and souvenirs.</td>
-          <td></td>
-        </tr>
-      </table>
-      <br>
+      <div class="box">
+        <h3>&emsp;LANGUAGE</h3>
 
-      <h3>LANGUAGE</h3>
-
-      <table class="language">
-        <tr>
-          <th>Mandarin / Min Nan</th>
-          <td>Mother tongue</td>
-        </tr>
-        <tr>
-          <th>Japanese</th>
-          <td>JLPT N1</td>
-        </tr>
-        <tr>
-          <th>English</th>
-          <td>Conversational</td>
-        </tr>
-        <tr>
-          <th>Swedish</th>
-          <td>SAS basis 4</td>
-        </tr>
-      </table>
+        <table class="language">
+          <tr>
+            <th>Mandarin / Min Nan</th>
+            <td>Mother tongue</td>
+          </tr>
+          <tr>
+            <th>Taiwanese Hokkien</th>
+            <td>Mother tongue</td>
+          </tr>
+          <tr>
+            <th>Japanese</th>
+            <td>JLPT N1</td>
+          </tr>
+          <tr>
+            <th>English</th>
+            <td>Conversational</td>
+          </tr>
+          <tr>
+            <th>Swedish</th>
+            <td>SAS basis 4</td>
+          </tr>
+        </table>
+        <br>
+      </div>
       <br><br>
     </div>
   </div>
-<footer>
-  <hr>
-  <p><em>Copyright &copy; <em>LienChu 2022</em><br></p>
-</footer>
+  <footer>
+    <hr>
+    <p><em>Copyright &copy; <em>LienChu 2022</em><br></p>
+  </footer>
 </body>
+
 </html>
