--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
   <script src="https://kit.fontawesome.com/d581a1ca1a.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap">
   <link rel="stylesheet" href="portfolio.css">
-  <link rel="shortcut icon" href="bird.svg" type="image.png">
+  <link rel="shortcut icon" href="/img/bird.svg" type="image.png">
   <title>Lien-Chu's Portfolio</title>
 </head>
 <body>
@@ -23,28 +23,26 @@
 </header>
 
   <div class="container">
-
-    <h1><a href="https://lienchus-filmintroduktion.netlify.app/" target="_blank"> LienChu's Oprofessionella Filmintroduktion</a></h1>
+    <h1>LienChu's Oprofessionella Filmintroduktion</a></h1>
     <br>
-
-    <table>
+    <a href="https://lienchus-filmintroduktion.netlify.app/" target="_blank">
+    <table class="picture-link">
       <tr>
-        <td><img src="/1.jpg"></td>
-        <td><img src="/2.jpg"></td>
-        <td><img src="/3.jpg"></td>
+        <td><img src="img/1.jpg"></td>
+        <td><img src="img/2.jpg"></td>
+        <td><img src="img/3.jpg"></td>
       </tr>
       <tr>
-        <td><img src="/4.jpg"></td>
-        <td><img src="/5.jpg"></td>
-        <td><img src="/6.jpg"></td>
+        <td><img src="img/4.jpg"></td>
+        <td><img src="img/5.jpg"></td>
+        <td><img src="img/6.jpg"></td>
       </tr>
       <tr>
-        <td><img src="/7.jpg"></td>
-        <td><img src="/8.jpg"></td>
-        <td><img src="/9.jpg"></td>
+        <td><img src="img/7.jpg"></td>
+        <td><img src="img/8.jpg"></td>
+        <td><img src="img/9.jpg"></td>
       </tr>
-  
-    </table>
+    </table></a>
   </div>
 
 <hr>
