Edited about me

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <script src="https://kit.fontawesome.com/d581a1ca1a.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap">
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="/img/bird.svg" type="image.png">
@@ -24,15 +23,17 @@
   </header>
 
   <div class="flexbox-container">
-    <div id="me">
-      <img src="/img/me.jpg" alt="" width="200">
+    <div >
+      <img id="me" src="/img/me.jpg" width="200">
       <br>
       <table class="i">
         <tr>
-          <th><a class="link" href="//linkedin.com/in/lien-chu-huang-85a78b238" target="_blank"><i
-                class="fa-brands fa-linkedin"></i></a></th>
-          <th><a class="link" href="////github.com/Lien-Chu" target="_blank"><i
-                class="fa-brands fa-github-square"></i></a></th>
+          <th><a href="//linkedin.com/in/lien-chu-huang-85a78b238" target="_blank">
+            <img id="icon" src="/img/linkedin.svg" width="35">
+          </a></th>
+          <th><a href="//github.com/Lien-Chu" target="_blank">
+            <img id="icon" src="img/github.svg" width="35">
+          </a></th>
         </tr>
       </table>
     </div>
