--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,8 @@
 </header>
 
   <div class="container">
-    <h1>LienChu's Oprofessionella Filmintroduktion</a></h1>
+    <a href="https://lienchus-filmintroduktion.netlify.app/" target="_blank">
+      <h1>LienChu's Oprofessionella Filmintroduktion</h1></a>
     <br>
     <a href="https://lienchus-filmintroduktion.netlify.app/" target="_blank">
     <table class="picture-link">
