--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div >
       <img id="me" src="/img/me.jpg" width="200">
       <br>
-      <table class="i">
+      <table class="icon">
         <tr>
           <th><a href="//linkedin.com/in/lien-chu-huang-85a78b238" target="_blank">
             <img id="icon" src="/img/linkedin.svg" width="35">
@@ -129,7 +129,7 @@
 
         <table class="language">
           <tr>
-            <th>Mandarin / Min Nan</th>
+            <th>Mandarin</th>
             <td>Mother tongue</td>
           </tr>
           <tr>
