--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap">
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="/img/bird.svg" type="image.png">
   <title>About Lien-Chu</title>
@@ -23,17 +22,17 @@
   </header>
 
   <div class="flexbox-container">
-    <div >
-      <img id="me" src="/img/me.jpg" width="200">
+    <div>
+      <img id="me" src="img/me.jpg" width="200">
       <br>
       <table class="icon">
         <tr>
           <th><a href="//linkedin.com/in/lien-chu-huang-85a78b238" target="_blank">
-            <img id="icon" src="/img/linkedin.svg" width="85">
-          </a></th>
+              <img id="icon" src="img/link.svg" width="85">
+            </a></th>
           <th><a href="//github.com/Lien-Chu" target="_blank">
-            <img id="icon" src="img/github.svg" width="35">
-          </a></th>
+              <img id="icon" src="img/github.svg" width="35">
+            </a></th>
         </tr>
       </table>
     </div>
@@ -41,7 +40,7 @@
       <br>
       <div class="box">
         <h3>&emsp;LIEN-CHU HUANG</h3>
-        <p id="Lienchu"><b>
+        <p id="Lienchu">
             Hi, I'm Lien-Chu and I'm a responsible person who is easy to work with and has no problems working
             independently.
             <br>
@@ -54,15 +53,11 @@
             <br>
             I will continue to learn new skills about front-end and back-end and various devices to improve my
             professional skills and become a full-Stack developer.
-            <b></p>
-
+            </p>
       </div>
       <div class="box">
         <h3>&emsp;COMPUTER KNOWLEDGE</h3>
-        <p id="knowledge"><b>CSS,&emsp;HTML,&emsp;Javascript,&emsp;React.js,&emsp;C#,&emsp;PHP</b>
-        </p>
-
-
+        <p id="knowledge"><b>CSS,&emsp;HTML,&emsp;Javascript,&emsp;React.js,&emsp;C#,&emsp;PHP</b></p>
       </div>
       <div class="box">
         <h3>&emsp;EDUCATION</h3>
@@ -101,7 +96,6 @@
       <br>
       <div class="box">
         <h3>&emsp;PROFESSIONAL EXPERIENCE</h3>
-
         <table>
           <tr>
             <th>Toa Trading Company (Tokyo, Japan)</th>
@@ -126,23 +120,22 @@
       <br>
       <div class="box">
         <h3>&emsp;LANGUAGE</h3>
-
         <table class="language">
-          <tr>
-            <th>Mandarin</th>
-            <td>Mother tongue</td>
-          </tr>
           <tr>
             <th>Taiwanese Hokkien</th>
             <td>Mother tongue</td>
           </tr>
           <tr>
-            <th>Japanese</th>
-            <td>JLPT N1</td>
+            <th>Mandarin</th>
+            <td>Mother tongue</td>
           </tr>
           <tr>
             <th>English</th>
             <td>Conversational</td>
+          </tr>
+          <tr>
+            <th>Japanese</th>
+            <td>JLPT N1</td>
           </tr>
           <tr>
             <th>Swedish</th>
